# LiveSplit

./: .editorconfig  .gitignore  .gitmodules  CodeMap.dgml  Directory.Build.props  LICENSE  LiveSplit.AutoSplitters.xml  LiveSplit.sln  LiveSplit.slnx  README.md  Red Alliance.asl  appveyor.yml  install.sh  livesplit-j.txt  make.bat
.github/: dependabot.yml
.github/workflows/: autosplitters-xml.yml  ci.yml  update-submodules.yml
Documentation/: Auto-Splitters.md
LiveSplit/: LiveSplit - 2010.sln  LiveSplit.sln
LiveSplit/.nuget/: NuGet.targets  packages.config
LiveSplit/Languages/: README.md  en.cfg  zh-CN.cfg
LiveSplit/LiveSplit.Core/: LiveSplit.Core.csproj  LiveSplitCore.cs  LiveSplitCoreFactory.cs  app.config  build_livesplit_core.sh  packages.config
LiveSplit/LiveSplit.Plugin/: App.config  LiveSplit.Plugin.csproj  LiveSplitConfigurationDialog.xaml  LiveSplitConfigurationDialog.xaml.cs  LiveSplitImageSource.cs  LiveSplitImageSourceFactory.cs  LiveSplitPlugin.cs
LiveSplit/LiveSplit.Register/: InternetExplorerBrowserEmulation.cs  LiveSplit.Register.csproj  Program.cs
LiveSplit/LiveSplit.Tests/: AutoSplitterXML.cs  LiveSplit.Tests.csproj  packages.config
components/: Directory.Build.props
lib/asr-capi/: Cargo.toml
lib/asr-capi/src/: lib.rs  runtime.rs  setting_value.rs  settings_list.rs  settings_map.rs  widgets.rs
props/: LiveSplit.Paths.props  LiveSplit.props
res/: Configure.xcf  DefaultGameIcon.xcf  LayoutFile_mip.xcf  Split.xcf  SplitsFile.xcf  Stop.xcf
src/: Directory.Build.props
src/LiveSplit/: App.config  (+4 more)
test/: Directory.Build.props
(+1424 files in other folders)
